# flow_testing

./: .gitignore  README.md  REFACTORING_RECOMMENDATIONS.md  notes.txt  pyproject.toml  rotation_testing.py  testing.ipynb
examples/: protein_flow_example.py
flow_testing/: __init__.py
flow_testing/data/: __init__.py  protein.py  protein_constants.py  protein_frames.py  protein_io.py  protein_transform.py  rigid.py  rot.py  so3_utils.py  utils.py
flow_testing/flow/: __init__.py  base.py  r3_flow.py  rot_flow.py  rotation_utils.py
