[project]
name = "flow-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "Luke Martin",email = "lukechile@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "biotite (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
